--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation "com.android.support:design:27.1.1"
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.firebaseui:firebase-ui:4.1.0'
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
