--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
+    implementation 'com.github.medyo:fancybuttons:1.9.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
