--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,15 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
     implementation 'com.github.medyo:fancybuttons:1.9.0'
 
+    implementation 'com.tomer:fadingtextview:2.5'
+    implementation 'com.ss.bannerslider:bannerslider:2.0.0'
 
 
 }
