--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -31,6 +32,8 @@
         <activity android:name=".View.AdminChucVu" />
         <activity android:name=".View.AdminQuanLy" />
         <activity android:name=".View.QuanLyPanel"></activity>
+
+        <service android:name=".Service.StartService"/>
     </application>
 
 </manifest>
