--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,10 @@
 
         <service android:name=".Service.StartService" />
 
-        <activity android:name=".View.QuanLyThongTinNhanVien"></activity>
+        <activity android:name=".View.QuanLyThongTinNhanVien" />
+        <activity android:name=".View.QuanLyThongBao" />
+        <activity android:name=".View.XemThongBao" />
+        <activity android:name=".View.SuaThongTin"></activity>
     </application>
 
 </manifest>
