dang ky lich lam

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <receiver android:name=".Ulty.NetworkChangeReceiver"
+        <receiver
+            android:name=".Ulty.NetworkChangeReceiver"
             android:label="NetworkChangeReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
                 <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
             </intent-filter>
-
         </receiver>
+
         <activity android:name=".View.SlashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,10 +47,9 @@
         <activity android:name=".View.SuaThongTin" />
         <activity android:name=".View.SuaThongTinNhanVien" />
         <activity android:name=".View.QuanLyLuong" />
-        <activity android:name=".View.QuanLyLuongMotNguoi"></activity>
-
-
-
+        <activity android:name=".View.QuanLyLuongMotNguoi" />
+        <activity android:name=".View.DangKyLichLam" />
+        <activity android:name=".View.LichNhanVienPanel"></activity>
     </application>
 
 </manifest>
