--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,18 +19,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.firebase:firebase-database:16.0.3'
     implementation 'com.google.firebase:firebase-auth:16.0.4'
-    implementation "com.android.support:design:27.1.1"
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.firebaseui:firebase-ui:4.1.0'
-
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
     implementation 'com.google.firebase:firebase-storage:11.8.0'
     testImplementation 'junit:junit:4.12'
@@ -38,11 +36,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
     implementation 'com.github.medyo:fancybuttons:1.9.0'
-
     implementation 'com.tomer:fadingtextview:2.5'
     implementation 'com.ss.bannerslider:bannerslider:2.0.0'
-
-
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
